BPrintJob: fixed crash. Since hrev49481, BAlert sets its default button in Go(), and not in the constructor. So DefaultButton() will return NULL if Go() hasn't been called yet. Moreover, BAlert now centers itself on screen in Go() and not in the costructor, so move it away from screen after the Go() call. Fixes #12271, although there should be a nicer way to implement this.